--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>FlyMC: A New Horizon for Minecraft Servers</title>
+    <title>FlyMC Home</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -11,25 +11,28 @@
     <header>
         <nav>
             <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="whats-new.html">What's new</a></li>
-                <li><a href="learn-more.html">Learn More</a></li>
-                <li><a href="store.html">Store</a></li>
+                <li><a href="/">Home</a></li>
+                <li><a href="/whats-new">What's new</a></li>
+                <li><a href="/learn-more">Learn More</a></li>
+                <li><a href="/store">Store</a></li>
             </ul>
         </nav>
     </header>
     <main>
-        <img src="cover.png" alt="FlyMC Logo" class="logo">
-        <h1>FlyMC: A New Horizon for Minecraft Servers</h1>
-        <p>Welcome to FlyMC, where the Minecraft experience is redefined with elegance and tranquility. Join us in a journey beyond the ordinary, into a realm where creativity and community flourish together.</p>
-        <p>Our server is currently under construction. Stay tuned for an amazing adventure coming soon!</p>
-        <a href="learn-more.html" class="btn">Learn More</a>
+        <div class="logo-container">
+            <img src="path-to-your-logo.png" alt="FlyMC Logo" class="logo">
+        </div>
+        <h1>Welcome to FlyMC</h1>
+        <p>A New Horizon for Minecraft Servers</p>
+        <div class="cta-buttons">
+            <a href="/join" class="btn">Join our Server</a>
+            <a href="/learn-more" class="btn btn-secondary">Learn More</a>
+        </div>
     </main>
     <footer>
         <div class="copyright">
             &copy; 2024 FlyMC
         </div>
     </footer>
-    <script src="script.js"></script>
 </body>
 </html>
