--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     </header>
     <main>
         <div class="logo-container">
-            <img src="path-to-your-logo.png" alt="FlyMC Logo" class="logo">
+            <img src="cover.png" alt="FlyMC Logo" class="logo">
         </div>
         <h1>Welcome to FlyMC</h1>
         <p>A New Horizon for Minecraft Servers</p>
